@@ -21,3 +21,26 @@ The `JAVA PROJECTS` view allows you to manage your dependencies. More details ca
 �
 
 <h1>JAVAFX PROJECT AS RAILWAY BOOKING SYSTEM</h1>
+<ul>
+<li>I created a website for rail ticker registration</li>
+<li>this website is connected to the mysql localhost</li>
+</ul>
+<h2>Used Technologies</h2>
+<ol>
+<li>Javafx</li>
+<li>Jdbc</li>
+<li>Mysql</li>
+<li>Java</li>
+</ol>
+<h3>Out ouput will be look like this</h3>
+<img width="521" alt="Screenshot 2022-10-02 115324" src="https://user-images.githubusercontent.com/80329368/193441452-ab63ddc0-8f2b-4077-8c9d-b675d5f6e76a.png">
+<p>this is my first javafx project i get lots of tuff because its setup took much more time atlast i finished</p>
+<h3>RUNNING SETUP</h3>
+<ul>
+  <li>you need to download and install the java in you system</li>
+  <li>U run this file with use of command line</li>
+  <li>u need to install jar file for javafx-https://jar-download.com/artifact-search/javafx</li>
+  <li>u need to download the jar file for jdbc- http://www.java2s.com/Code/Jar/j/Downloadjdbcjar.htm</li>
+  <li>javac --module-path "javafx jar file path" --add-modules javafx.controls,javafx.fxml Main.java</li>
+  <li>java --module-path "javafx jar file path" --add-modules javafx.controls,javafx.fxml Main</li>
+</ul>
